--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,3 +30,163 @@ main {
 main:has(.back-link) {
   text-align: center;
 }
+
+.form {
+  display: flex;
+  gap: 8px;
+  margin: 0 auto;
+  margin-top: 36px;
+  margin-bottom: 32px;
+  max-width: 371px;
+}
+
+.input {
+  width: 272px;
+  height: 40px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+
+  outline: transparent;
+}
+
+.input:hover {
+  border: 1px solid #000;
+}
+
+.input:focus {
+  border: 1px solid #4e75ff;
+}
+
+.submit-btn {
+  background-color: #4e75ff;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.submit-btn:hover {
+  background-color: #6c8cff;
+}
+
+.loading-imgs-text.hidden {
+  display: none;
+}
+
+.loading-text-container{
+  text-align: center;
+}
+.loading-imgs-text {
+  margin: 0 auto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.gallery-item {
+  flex-basis: calc((100% - 48px) / 3);
+  border: 1px solid #808080;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-item:hover {
+  transform: scale(1.03);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.gallery-image{
+  /* display: block; */
+  height: 152px;
+  object-fit: cover;
+  width: 100%;
+}
+
+.image-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  background-color: #f7f7f7;
+  border-top: 1px solid #ccc;
+  font-size: 14px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-title {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 133%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.info-value {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.load-more-btn {
+  border: none;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  padding: 8px 16px;
+  width: 125px;
+  height: 40px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  display: block;
+  margin: 0 auto;
+  margin-top: 32px;
+  margin-bottom: 10px;
+}
+
+button.hidden {
+  visibility: hidden;
+}
+
+@media (max-width: 1024px) {
+  .gallery-item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+
+@media (max-width: 600px) {
+  .gallery-item {
+    flex-basis: 100%;
+  }
+}
